# ERDP_STM32

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  JLinkLog.txt  LICENSE  README.md  STM32F407VET6_FLASH.ld  compile_commands.json  erdp_stm32.uvprojx
Doc/: CMAKE_VS_KEIL_STARTUP_DIFF.md  CPP_PRINTF_MACRO_USAGE.md  DEBUG_TROUBLESHOOTING.md  FLASH_PROGRAMMER_GUIDE.md  HOW_TO_DEBUG.md  HOW_TO_SELECT_FLASHER.md  INIT_MODE_FAILED_FIX.md  KEIL_DEBUG_RUN_TO_MAIN_FIX.md  KEIL_SEMIHOSTING_FIX.md  OPENOCD_TIMEOUT_FIX.md  PRINTF_MACRO_EXPANSION.md  SEMIHOSTING_BKPT_FIX.md  STLINK_GDB_SERVER.md  UART_INIT_DEBUG_ISSUE.md
Scripts/: debug_init.ini  test_openocd_connection.bat
Scripts/OpenOCD/: openocd_dap.cfg  openocd_dap_slow.cfg  openocd_stlink.cfg  openocd_stlink_slow.cfg
Source/: erdp_config.h  thread_config.h
Source/Adapter/log/: log_adapter.cpp  log_adapter.hpp
Source/Application/: main.cpp
Source/Common/: erdp_assert.h
Source/HAL/: erdp_hal.hpp
Source/HAL/EXTI/: erdp_hal_exti.cpp  erdp_hal_exti.hpp
Source/HAL/GPIO/: erdp_hal_gpio.cpp  erdp_hal_gpio.hpp
Source/HAL/SPI/: erdp_hal_spi.cpp  erdp_hal_spi.hpp
Source/HAL/UART/: erdp_hal_uart.cpp  erdp_hal_uart.hpp
Source/Interface/: erdp_interface.h
Source/Interface/Hardware/inc/: erdp_if_exti.h  erdp_if_gpio.h  erdp_if_spi.h  erdp_if_uart.h
Source/Interface/Hardware/src/: erdp_if_exti.c  erdp_if_gpio.c  erdp_if_spi.c  erdp_if_uart.c
Source/Interface/RTOS/: erdp_if_rtos.c  erdp_if_rtos.h
Source/Kernel/: syscalls.c
Source/Kernel/Driver/: stm32f4xx_it.c  syscalls.c
Source/Kernel/Driver/CMSIS/Device/ST/STM32F4xx/Source/Templates/: system_stm32f4xx.c
Source/Kernel/Driver/CMSIS/Include/: core_cmFunc.h
Source/Kernel/RTOS/FreeRTOS/: FreeRTOSConfig.h
Source/OSAL/: erdp_heap.hpp  erdp_osal.cpp  erdp_osal.hpp
cmake/: create_bin.cmake  flash_by_install.cmake  gcc-arm-none-eabi.cmake
